--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-1" style="background-image: url(assets/images/klaas-2-2000x2647-93.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-1" style="background-image: url(assets/images/klaas-2-2000x2647-93.jpg);">
 
     
 
@@ -236,7 +236,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">Over mij</h3>
-                <div class="lead"><p>Geboren in het lanseer jaar van de "Spice Girls" en de Vlaamse soapserie "Thuis".</p></div>
+                <div class="lead"><p>Geboren in het lanceer jaar van de "Spice Girls" en de Vlaamse soapserie "Thuis".</p></div>
                 
             </div>
         </div>
@@ -258,8 +258,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-6 lead"><p>Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. MobiRise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools available today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p></div>
-            <div class="col-xs-12 col-md-6 lead"><p>Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. MobiRise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools available today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p></div>
+            <div class="col-xs-12 col-md-6 lead"><p>- Illustratie vrije beeldende kunsten Sint-Lucas School Of Art Gent.</p><p>- Lid van collectief "Zwermkat".</p></div>
+            <div class="col-xs-12 col-md-6 lead"></div>
         </div>
     </div>
 
